1999-09-08  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/stage2.c (run_menu): If run_script is successfully
	finished, break the loop. Reported by Pavel Roskin.
	Do not wait an input character when FALLBACK_ENTRY is less than
	zero.
	* stage2/cmdline.c (run_script): If ERRNUM is non-zero, wait an
	input character, whether FALLBACK is less than zero or not.
	
1999-09-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/builtins.c (configfile_func): New function.
	(builtin_configfile): New variable.
	(builtin_table): Added the pointer to BUILTIN_CONFIGFILE.
	
1999-09-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From Pavel Roskin:
	* stage2/asm.S [!STAGE1_5] (chain_stage2): Deleted.
	[STAGE1_5] (get_code_end): Likewise.
	* stage2/char_io.c (grub_strncat): Likewise.
	* stage2/common.c [STAGE1_5] (saved_mem_upper): Likewise.
	* stage2/smp-imps.c (imps_release_cpus): Likewise.
	(imps_any_new_apics): Made static.
	(imps_enabled): Likewise.
	(imps_num_cpus): Likewise.
	(imps_lapic_addr): Likewise.
	(imps_cpu_apic_map): Likewise.
	(imps_apic_cpu_map): Likewise.
	
1999-09-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/builtins.c (testload_func): Fix the typos: 0x2000000 ->
	0x200000 and 0x3000000 -> 0x300000.
	
1999-09-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From Hisazumi Kenji <nel@soraneko.com>:
	* stage2/fsys_ffs.c (mapblock_offset): New variable.
	(mapblock_bsize): Likewise.
	(MAPBUF): New macro.
	(MAPBUF_LEN): Likewise.
	(ffs_mount): Set MAPBLOCK_OFFSET to -1.
	(block_map): Added partial read support.
	
1999-09-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/cmdline.c (find_command): If COMMAND is less than
	(*BUILTIN)->NAME in dictionary order, break the loop.
	* stage2/builtins.c (builtin_chainloader): Capitalize the
	variable name in the short doc.
	(builtin_color): Likewise.
	(builtin_geometry): Likewise.
	(builtin_help): Likewise.
	(builtin_hide): Likewise.
	(builtin_initrd): Likewise.